--- a/MainCodes/views/afficheRegistration.ejs
+++ b/MainCodes/views/afficheRegistration.ejs
@@ -13,23 +13,7 @@
     <link rel="stylesheet" href="/styles/registration.css">
 </head>
 <body>
-    <header id="home-page"class="candidature">
-        <div class="home-container">
-            <div class="navs-wrapper">
-                <div class="brand-logo">
-                    <img src="/img/favicon.png" alt="onlex logo">
-                    <h1 class="brand-name dark-gray-text">
-                        ONLEX
-                    </h1>
-                </div>
-                <nav id="navigation">
-                    <ul class="nav-link">
-                        <a href="/admin" class="dark-gray-text">Tableau de bord</a>                        
-                    </ul>
-                    
-             </div>
-        </div>
-    </header>
+    <%-include("./includes/subAdminHeader")%>
     <main id="registration-info">
         <p class="bg-green">Identite</p>
         <div class="grid-container">
