--- a/MainCodes/FrontEnd/public/scss/registration.scss
+++ b/MainCodes/FrontEnd/public/scss/registration.scss
@@ -4,7 +4,7 @@
 	width: 100vw;
 
 	.home-container {
-		height: 100%;
+		// height: 100%;
 		.navs-wrapper {
 			@include displayFlex(row, center, space-between);
 			background: $white;
