--- a/MainCodes/FrontEnd/public/styles/style.css
+++ b/MainCodes/FrontEnd/public/styles/style.css
@@ -88,6 +88,10 @@ a {
   color: #fff;
 }
 
+input[type="submit"] {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 768px) {
   .btn {
     padding: 5px;
