--- a/MainCodes/FrontEnd/public/scss/style.scss
+++ b/MainCodes/FrontEnd/public/scss/style.scss
@@ -316,6 +316,28 @@
 	}
 }
 
+// * Concours page
+
+#annonce-layout{
+	.regle{
+		margin-bottom: 6rem;
+		h3{
+			font-size: 1.4rem;
+			margin-bottom: 12px;
+			text-align: center;
+		}
+
+		ul{
+			max-width: 90%;
+			margin: auto;
+			li{
+				margin: 10px 0;
+				text-align: justify;
+			}
+		}
+	}
+}
+
 //CANDIDATE dashboard
 #user-dashboard{
 	height: 10vh;
@@ -390,6 +412,20 @@
 			box-shadow: 1px 1px 20px rgba(0,0,0,0.1);
 			margin-top: 25px;
 			overflow: scroll;
+
+			a{
+				color: $green;
+				display: block;
+				padding:.5rem 1rem;
+				border-bottom: 1px solid $gray-color;
+			}
+			h3{
+				text-align: center;
+				font-weight: 300;
+				height: 100%;
+				color: $orange;
+				@include displayFlex(row,center,center)
+			}
 		}
 	}
 }
