--- a/MainCodes/FrontEnd/public/styles/adminStyle.css
+++ b/MainCodes/FrontEnd/public/styles/adminStyle.css
@@ -10,7 +10,7 @@ body {
 	line-height: 1.4;
 	background-color: #f0f4f5;
 	color: #606c72;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 a {
@@ -35,7 +35,10 @@ a {
 ul li {
 	list-style: none;
 }
-
+ 
+button{
+	cursor: pointer;
+}
 .darkbg,
 .btn-dark {
 	background-color: #606c72;
