--- a/MainCodes/views/adminDashboard.ejs
+++ b/MainCodes/views/adminDashboard.ejs
@@ -41,8 +41,8 @@
                 <div id="results">
                     <a href="" id="result"><span class="material-icons">assignment</span>Results <i class="fas fa-chevron-right"></i></a>
                     <ul id="result-options">
-                        <li><a href="">Candidate Results</a></li>
-                        <li><a href="">Exams Analytics</a></li>
+                        <li><a href="/Admin/candidate/result">Candidate Results</a></li>
+                        <li><a href="/Admin/exams/corrige">Corriger Examen</a></li>
                         <li></li>
                     </ul>
                 </div>
