--- a/MainCodes/FrontEnd/public/styles/exams.css
+++ b/MainCodes/FrontEnd/public/styles/exams.css
@@ -31,6 +31,7 @@ a {
   border: 0;
   outline: none;
   text-decoration: none;
+  border-radius: 4px;
 }
 
 .bg-green {
@@ -175,5 +176,28 @@ input[type="submit"] {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+#end-of-test {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 70vh;
+}
+
+#end-of-test h2 {
+  font-size: 2.2em;
+  margin-bottom: 15px;
+  word-spacing: 5px;
 }
 /*# sourceMappingURL=exams.css.map */
