--- a/MainCodes/FrontEnd/public/styles/style.css
+++ b/MainCodes/FrontEnd/public/styles/style.css
@@ -31,6 +31,7 @@ a {
   border: 0;
   outline: none;
   text-decoration: none;
+  border-radius: 4px;
 }
 
 .bg-green {
@@ -733,5 +734,29 @@ input[type="submit"] {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+#resultat {
+  margin: 3rem auto;
+  /* border: 1px solid #606c72; */
+  border-collapse: collapse;
+  text-align: center;
+  height: 60%;
+  width: calc(100vw - 10%);
+}
+
+#resultat thead {
+  background-color: #63d694;
+  color: #ffff;
+  height: 40px;
+}
+
+#resultat tbody tr {
+  border-bottom: 1px solid #cecece;
+  max-height: 5px;
+}
+
+#resultat tbody tr:nth-child(even) {
+  background-color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
