--- a/MainCodes/views/includes/afficheAnnonce.ejs
+++ b/MainCodes/views/includes/afficheAnnonce.ejs
@@ -1,3 +1,4 @@
+<%if(head!=''){%>
 <table id="table">
     <thead>
         <tr>
@@ -24,7 +25,7 @@
         
     </tbody>
 </table>
-
+<%}%>
 <!-- *! UPDATE ANNONCE MODEL -->
 <%if(id=="create-annonce"){%>
 <div class="create-annonce" id="<%= id %>">
@@ -80,4 +81,19 @@
         </form>
     </div>
 </div>
+<%}%>
+
+<%if(corriger){%>
+    <main id="corriger-examen">
+        <div class="wrapper">
+            <form action="/exams/corriger" method="POST">
+                <select name="concour" id="">
+                    <%for(let i=0;i<concours.length;i++){%>
+                    <option value="<%=concours[i].idConcours%>"><%=concours[i].titre%></option>
+                    <%}%>
+                </select>
+                <input type="submit" value="Corriger" class="btn greenbg">
+            </form>
+        </div>
+    </main>
 <%}%>
